* Add new publisher that simply wraps other publishers and invokes them only if the build was successful.

P4:
----------------------
* Use double quote only on Windows, single quote otherwise.
* Migrated to use CommandLine util class for correct execution across environments. Patch by Jason Parrott.
* Fixed parsing logic when file has more than 100 revisions. Patch by David Golombek.

P4Bootstrapper:
----------------------
* Deprecated attributes path, p4Port, p4User, and p4Client in favor
  of view, port, user, client to maintain consistency with P4 (SourceControl).
* Migrated to use CommandLine util class for correct execution across environments. Patch by Jason Parrott.

ProjectXMLHelper:
----------------------
* Added support for Ant-style properties in the config file (CC-132). Patch by Robert Smith

SCPPublisher:
----------------------
* No longer remove first char from xml log file path, since it now causes errors. Patch by Dan Penhurst
* Added property to specify the source separator. Patch by Dan Penhurst.

Script & ScriptRunner
----------------------
* Refactor common "Script" logic out of AntBuilder, NantBuilder and MavenBuilder (CC-178). Patch by Eric Pugh

SelfConfiguringPlugin:
----------------------
* Add new SelfConfiguringPlugin interface. Submitted by Jeff Ramsdale

SocketPublisher:
----------------
* Simple publisher that writes "Success" or "Failure" to a socket.  Written by Darren Cotteril.

StarTeamBootstrapper:
----------------------
* Prevent StarTeam from needing user interaction (CC-189). Patch by Lee Marlow

testdetails.xsl:
----------------------
* Escape '<' and '>' in popup window (CC-22). Patch by Jerome Lacoste

TimeBuild:
----------------------
* Add new source control that will trigger a build at a specified time. Submitted by Eric Pugh

VSS(Journal):
----------------------
* Create SimpleDateFormats with Locale.US to fix JUnit build failure on Chinese Windows systems (CC-153 & CC-156)


CruiseControl Release Notes - 2.2.1
